@@ -12119,7 +12119,7 @@
     },
     {
       "name": "AttachAudioStreamProcessor",
-      "description": "Attach audio stream processor to stream, receives the samples as 'float'",
+      "description": "Attach audio stream processor to stream, receives frames x 2 samples as 'float' (stereo)",
       "returnType": "void",
       "params": [
         {
@@ -12149,7 +12149,7 @@
     },
     {
       "name": "AttachAudioMixedProcessor",
-      "description": "Attach audio stream processor to the entire audio pipeline, receives the samples as 'float'",
+      "description": "Attach audio stream processor to the entire audio pipeline, receives frames x 2 samples as 'float' (stereo)",
       "returnType": "void",
       "params": [
         {
