@@ -723,13 +723,13 @@
         },
         {
           "type": "#endif",
-          "name": "colors",
-          "description": "Vertex colors (RGBA - 4 components per vertex) (shader-location = 3)"
+          "name": "indices",
+          "description": "Vertex indices (in case vertex data comes indexed) (6 indices per quad)"
         },
         {
-          "type": "#if defined(GRAPHICS_API_OPENGL_ES2)",
-          "name": "not",
-          "description": ""
+          "type": "#if defined(GRAPHICS_API_OPENGL_ES2)[5]",
+          "name": "vboId",
+          "description": "OpenGL Vertex Buffer Objects id (5 types of vertex data)"
         },
         {
           "type": "unsigned short *",
@@ -738,8 +738,8 @@
         },
         {
           "type": "#endif",
-          "name": "indices",
-          "description": "Vertex indices (in case vertex data comes indexed) (6 indices per quad)"
+          "name": "colors",
+          "description": "Vertex colors (RGBA - 4 components per vertex) (shader-location = 3)"
         },
         {
           "type": "unsigned int",
